@@ -1,5 +1,10 @@
 2015-01-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/vicar.c (ReadVICARImage): Fix Vicar reader's dogged
+	determination to continue reading when there is nothing left to
+	read.  Solves problem with file provided by Jodie Cunningham on
+	2015-01-25.
+
 	* magick/magick.c (PanicDestroyMagick): Replace memory allocation
 	functions with dummy functions rather than NULL pointers.
 	(InitializeMagickSignalHandlers): Register
